# photos-qt

./: .gitignore  CMakeLists.txt  Main.qml  PhotoModel.qml  datamodel.cpp  datamodel.h  imageprovider.h  main.cpp  photointerface.cpp  photointerface.h  resources.qrc
